custom/themes/ns_custom/css/custom.css
/* Datasets custom CSS. */

/* Colour.
 *
 * red1:  cc0000;
 * red2:  990000;
 * gray1: f8f8f8;
 * gray2: e7e7e7;
 */

/* All forms. */

#edit-preview {
  display: none;
}

/* Bootstrap global overrides. */

label {
  margin-right: 10px !important;
}

p {
  text-align: justify;
}

input:hover,
input:focus,
input:active,
select:hover,
select:focus,
select:active {
  box-shadow: none !important;
  border-color: #990000 !important;
}

a,
.pagination > li > a,
.pagination > li > span {
  color: #cc0000;
}

.select-wrapper:after {
  color: #990000;
}

a:hover,
a:focus,
a:active,
.pagination > li > a:hover,
.pagination > li > a:focus,
.pagination > li > a:active,
.pagination > li > span:hover,
.pagination > li > span:focus,
.pagination > li > span:active {
  color: #990000;
}

.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  background-color: #cc0000;
  border-color: #cc0000;
}
.btn-info,
.btn-primary {
  background-color: #cc0000;
  border-color: #990000;
}

.btn-info:hover,
.btn-info:focus,
.btn-info:active,
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
  background-color: #990000 !important;
  border-color: #990000 !important;
  outline: none !important;
}

.name.navbar-brand {
  font-size: 24px;
}

.main-container.container.js-quickedit-main-content {
  padding-top: 40px !important;
}

/* Global Search Form */

form#views-exposed-form-ns-references-page-2 > div {
  margin: 0 auto;
  width: 80%;
  text-align: center;
}

form#views-exposed-form-ns-references-page-2 > div >
div.form-item.js-form-item.form-type-textfield.js-form-type-textfield {
  width: 70%;
}

form#views-exposed-form-ns-references-page-2 > div >
div.form-item.js-form-item.form-type-textfield.js-form-type-textfield >
input {
  width: 100%;
}

section#block-searchlabel {
  margin: 0 auto;
  padding-top: 3%;
  padding-bottom: 5%;
  text-align: center;
}

/* Avanced Search Form */

form#views-exposed-form-ns-references-page-3 {
  margin-bottom: 30px;
}

form#views-exposed-form-ns-references-page-3 label {
  display: block;
  margin-top: 10px;
  margin-bottom: 4px;
}

form#views-exposed-form-ns-references-page-3 div div:first-child {
  width: 100%;
  max-width: 934px;
}

form#views-exposed-form-ns-references-page-3 div div:first-child input {
  width: 100%;
}


form#views-exposed-form-ns-references-page-3 div div:not(:first-child) {
  width: 33%;
}

form#views-exposed-form-ns-references-page-3 div div.select-wrapper {
  width: 100%;
}

form#views-exposed-form-ns-references-page-3 div div:not(:first-child) input,
form#views-exposed-form-ns-references-page-3 div div:not(:first-child) select {
  width: 100%;
}

form#views-exposed-form-ns-references-page-3 div#edit-actions {
  display: block;
  margin-top: 20px;
}

/* By-subject Search Form */

form#views-exposed-form-ns-references-page-1 {
  margin-bottom: 30px;
}

/* Explore Subjects Page */

div.view-id-ns_subjects.view-display-id-page_1 div.view-content {
  -webkit-columns: 3;
  s-moz-columns: 3;
  columns: 3;
}

/* Intro Page */

p#intro-site {
  padding: 5% 10%;
  margin: 5% 0%;
  background-color: #f8f8f8;
  border: #e7e7e7 1px solid;
  border-radius: 4px;
}

div#cirn-csn {
  width: 90%;
  min-height: 280px;
}

div#about-cirn {
  min-height: 280px;
  margin-top: 2%;
  padding-bottom: 10px;
  border: #e7e7e7 1px solid;
  border-radius: 4px;
}

div#about-csn {
  min-height: 280px;
  margin-top: 2%;
  padding-bottom: 10px;
  border: #e7e7e7 1px solid;
  border-radius: 4px;
}

img#cirn-logo {
  padding-top: 10px;
  padding-bottom: 10px;
  vertical-align: top;
  float: none !important;
  max-width: 160px;
}

img#csn-logo {
  padding-top: 10px;
  padding-bottom: 22px;
  vertical-align: top;
  float: none !important;
  max-width: 180px;
  position: relative;
}

/* Suggest Item Form */

fieldset#edit-field-suggest-ref--wrapper
span.fieldset-legend.js-form-required.form-required {
  font-size: 16px;
}

fieldset#edit-field-suggest-ref--wrapper
span.fieldset-legend.js-form-required.form-required:after {
  display: none !important;
}

h1.page-header {
  margin-top: 10px;
  font-size: 20px;
}

div#edit-field-abstract-0-format {
  display: none !important;
}

form#contact-message-suggest-reference-form button#edit-submit {
  text-indent: -9999px;
  line-height: 0;
}

form#contact-message-suggest-reference-form button#edit-submit:after {
  content: "Submit";
  text-indent: 0;
  display: block;
  line-height: initial;
}

/* Bibcite Citation Node Display */

div.field--name-keywords.field--type-entity-reference div.field--item a,
div.field--name-keywords.field--type-entity-reference div.field--item a:hover,
div.field--name-keywords.field--type-entity-reference div.field--item a:focus,
div.field--name-keywords.field--type-entity-reference div.field--item a:visited,
div.field--type-bibcite-contributor div.field--item a,
div.field--type-bibcite-contributor div.field--item a:hover,
div.field--type-bibcite-contributor div.field--item a:focus,
div.field--type-bibcite-contributor div.field--item a:visited {
  pointer-events: none;
  text-decoration: none;
  color: initial;
}

div.field.field--label-above {
  margin-bottom: 10px;
}

div.bibcite-links.form-group {
  margin-top: 10px;
}

div.bibcite-type::before {
  content: "Type\A";
  font-weight: bold;
}

div.bibcite-type {
  white-space: pre-line;
}

/* Bibcite Reference edit form */

a#edit-delete.button.button--danger,
div.description.help-block,
#author-add-more-wrapper > div > button.tabledrag-toggle-weight {
  display: none;
}

form.contact-message-feedback-form.contact-message-form.contact-form
#edit-submit {
  width: auto !important;
}

#edit-submit {
    width: 90px;
}

#edit-actions {
  margin-top: 10px;
}

input[data-drupal-selector="edit-bibcite-reference-journal-article-delete-form"]
  + #edit-actions {
  padding-top: 10px;
}

/* Footer */

footer.footer.container {
  padding-left: 0px !important;
}

.footer-logo {
  margin-top: 10%;
  max-width: 260px;
  max-height: 50px;
}

footer.footer.container > div.container {
  padding-left: 0px !important;
}

/* Responsive */

@media (min-width: 768px) {
  .menu.nav.navbar-nav {
    float: right;
    margin: 0;
  }
}

@media (max-width: 991px) {
  .main-container.container.js-quickedit-main-content {
    margin-top: 10%;
  }
}

@media (max-width: 768px) {
  #edit-submit-ns-references {
    display: block;
  }

  #block-ns-custom-account-menu{
    margin-left: 10%;
  }

  form#views-exposed-form-ns-references-page-3 button#edit-reset {
    margin-top: 10px;
  }

  form#views-exposed-form-ns-references-page-3 div div {
    width: 100% !important;
  }
}

